2020-02-11  Nick Clifton  <nickc@redhat.com>

	Import from the mainline:

	* elf32-msp430.c (msp430_final_link_relocate): Always use longs
	for addresses in print statements.
	(msp430_elf_relax_delete_bytes): Likewise.
	(msp430_elf_relax_add_words): Likewise.
	(msp430_elf_relax_section): Likewise.

2020-02-10  Jozef Lawrynowicz  <jozef.l@mittosystems.com>

	Apply from master
	2020-02-10  Jozef Lawrynowicz  <jozef.l@mittosystems.com>
	* elf32-msp430.c (msp430_final_link_relocate): Add printf statements for
	debugging relocations.
	(msp430_elf_relax_delete_bytes): Likewise.
	(msp430_elf_relax_add_two_words): Likewise.
	(msp430_elf_relax_section): Likewise.

	2020-02-10  Jozef Lawrynowicz  <jozef.l@mittosystems.com>
	* elf32-msp430.c (msp430_elf_relax_add_two_words): Rename to
	msp430_elf_relax_add_words. Support insertion of either one or two
	words.
	(msp430_elf_relax_section): Catch opcode of 0x3c00 when relocation
	needs to be grown. Handle insertion of branch instruction to replace
	jump.

	2020-02-10  Jozef Lawrynowicz  <jozef.l@mittosystems.com>

	* elf32-msp430.c (msp430_elf_relax_section): Before relaxing a branch,
	check if previous instruction matches a conditional jump inserted
	earlier. Invert conditional jump and delete branch in this case.

2020-02-01  Nick Clifton  <nickc@redhat.com>

	* development.sh: Set development to true.
	* version.m4: Set to 2.34.0.
	* configure: Regenerate.

2020-02-01  Nick Clifton  <nickc@redhat.com>

	Binutils 2.34 release.
	* development.sh: Set fields to false.
	* version.m4: Set to 2.34.
	* configure: Regenerate.

2020-01-29  Alan Modra  <amodra@gmail.com>

	Apply from master
	2020-01-27  H.J. Lu  <hongjiu.lu@intel.com>
		    Alan Modra  <amodra@gmail.com>
	PR ld/25458
	* elflink.c (_bfd_elf_gc_mark_rsec): Mark all weak aliases.

	2020-01-23  Alan Modra  <amodra@gmail.com>
	PR 25444
	* elf.c (assign_file_positions_for_load_sections): Avoid divide
	by zero when p_align is zero.

	2020-01-22  Alan Modra  <amodra@gmail.com>